[project]
name = "twitch-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Hykin", email = "jeff.hykin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "twitchio<3.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
